@@ -1,7 +1,0 @@
-#!/bin/sh
-
-set -e
-
-glib-compile-schemas /usr/share/glib-2.0/schemas
-
-#DEBHELPER#
